Fix product quantity when for cart items